# BeatingMATLAB_filter

./: CMakeLists.txt  README.md  a.out  benchmark.cpp  decimateComparison.cpp  get_figs.py  linux_benchmarks.txt
.github/workflows/: ccpp.yml
blog/: .get_figs.py.swp  CMakeLists.txt  benchmark.cpp  fma_linux_benchmarks.txt  get_figs.py  linux_benchmarks.txt
blog/plots/: 800.eps  8000.eps  80000.eps  800000.eps  avx.eps  real_imag.eps  rev_filter.eps  vanilla.eps
